[gd_scene load_steps=62 format=3 uid="uid://dy3yunskxuak3"]

[ext_resource type="Script" path="res://Player/player.gd" id="1_h4yhi"]
[ext_resource type="Texture2D" uid="uid://dy42envxakneb" path="res://Player/64X128_Idle_Free.png" id="1_rpkq4"]
[ext_resource type="Texture2D" uid="uid://cx31sevq1er43" path="res://Player/64X128_Runing_Free.png" id="2_3ir4p"]
[ext_resource type="Texture2D" uid="uid://422y65p2ebi6" path="res://Player/Weapons/weaponR3.png" id="4_yjfnv"]
[ext_resource type="Texture2D" uid="uid://dfcgu2avhuesc" path="res://Player/SleekBarsProgress.png" id="5_guolk"]
[ext_resource type="AudioStream" uid="uid://7dbuxn237jou" path="res://Sounds/GunShotSnglShotIn PE1097906.wav" id="6_qu416"]
[ext_resource type="AudioStream" uid="uid://c4owvagw1gih8" path="res://Sounds/GunShotSnglShotEx PE1097508.wav" id="7_t6s4b"]
[ext_resource type="AudioStream" uid="uid://5c6xw2ntlnp2" path="res://Sounds/Shotgun-Far-Gunshot-B.wav" id="8_v6waj"]
[ext_resource type="AudioStream" uid="uid://c8p40wqo6mn3a" path="res://Sounds/SHOTGUN RELOAD G Sound Effect.wav" id="9_a8eu8"]
[ext_resource type="AudioStream" uid="uid://dki0lg67p6w8o" path="res://Sounds/NoAmmoInGun.wav" id="9_mfh5m"]
[ext_resource type="FontFile" uid="uid://c3hq2276qsrwh" path="res://Player/Font/Kurland.ttf" id="10_gevxw"]

[sub_resource type="AtlasTexture" id="AtlasTexture_7wfbd"]
atlas = ExtResource("1_rpkq4")
region = Rect2(0, 0, 64, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_vfgpo"]
atlas = ExtResource("1_rpkq4")
region = Rect2(64, 0, 64, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_deov5"]
atlas = ExtResource("1_rpkq4")
region = Rect2(128, 0, 64, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_g6sbq"]
atlas = ExtResource("1_rpkq4")
region = Rect2(192, 0, 64, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_gc6fq"]
atlas = ExtResource("1_rpkq4")
region = Rect2(256, 0, 64, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_8rx15"]
atlas = ExtResource("1_rpkq4")
region = Rect2(320, 0, 64, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_34ic3"]
atlas = ExtResource("1_rpkq4")
region = Rect2(384, 0, 64, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_4vxl3"]
atlas = ExtResource("1_rpkq4")
region = Rect2(448, 0, 64, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_g6xuv"]
atlas = ExtResource("1_rpkq4")
region = Rect2(0, 256, 64, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ut5wl"]
atlas = ExtResource("1_rpkq4")
region = Rect2(64, 256, 64, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_quogb"]
atlas = ExtResource("1_rpkq4")
region = Rect2(128, 256, 64, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_rlqpd"]
atlas = ExtResource("1_rpkq4")
region = Rect2(192, 256, 64, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_tus85"]
atlas = ExtResource("1_rpkq4")
region = Rect2(256, 256, 64, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_vj872"]
atlas = ExtResource("1_rpkq4")
region = Rect2(320, 256, 64, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_fscgg"]
atlas = ExtResource("1_rpkq4")
region = Rect2(384, 256, 64, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_xaj06"]
atlas = ExtResource("1_rpkq4")
region = Rect2(448, 256, 64, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_1e3o3"]
atlas = ExtResource("1_rpkq4")
region = Rect2(0, 384, 64, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_fs718"]
atlas = ExtResource("1_rpkq4")
region = Rect2(64, 384, 64, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_lkdhf"]
atlas = ExtResource("1_rpkq4")
region = Rect2(128, 384, 64, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_08ucw"]
atlas = ExtResource("1_rpkq4")
region = Rect2(192, 384, 64, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_qnsaj"]
atlas = ExtResource("1_rpkq4")
region = Rect2(256, 384, 64, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_q36nk"]
atlas = ExtResource("1_rpkq4")
region = Rect2(320, 384, 64, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ur1ip"]
atlas = ExtResource("1_rpkq4")
region = Rect2(384, 384, 64, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_nsy1f"]
atlas = ExtResource("1_rpkq4")
region = Rect2(448, 384, 64, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_yjr6p"]
atlas = ExtResource("2_3ir4p")
region = Rect2(0, 0, 64, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_xlnop"]
atlas = ExtResource("2_3ir4p")
region = Rect2(64, 0, 64, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_113jh"]
atlas = ExtResource("2_3ir4p")
region = Rect2(128, 0, 64, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_rgo2y"]
atlas = ExtResource("2_3ir4p")
region = Rect2(192, 0, 64, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ht1bu"]
atlas = ExtResource("2_3ir4p")
region = Rect2(256, 0, 64, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_l6kb1"]
atlas = ExtResource("2_3ir4p")
region = Rect2(320, 0, 64, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_0x4a6"]
atlas = ExtResource("2_3ir4p")
region = Rect2(384, 0, 64, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_livl3"]
atlas = ExtResource("2_3ir4p")
region = Rect2(448, 0, 64, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_wqbqd"]
atlas = ExtResource("2_3ir4p")
region = Rect2(0, 128, 64, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_gieyu"]
atlas = ExtResource("2_3ir4p")
region = Rect2(64, 128, 64, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_10duh"]
atlas = ExtResource("2_3ir4p")
region = Rect2(128, 128, 64, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_l7m2o"]
atlas = ExtResource("2_3ir4p")
region = Rect2(192, 128, 64, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_85l2v"]
atlas = ExtResource("2_3ir4p")
region = Rect2(256, 128, 64, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_l8xdi"]
atlas = ExtResource("2_3ir4p")
region = Rect2(320, 128, 64, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_g6plc"]
atlas = ExtResource("2_3ir4p")
region = Rect2(384, 128, 64, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_d2rhc"]
atlas = ExtResource("2_3ir4p")
region = Rect2(448, 128, 64, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_f3hf2"]
atlas = ExtResource("2_3ir4p")
region = Rect2(0, 384, 64, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ixb8o"]
atlas = ExtResource("2_3ir4p")
region = Rect2(64, 384, 64, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_wkyrq"]
atlas = ExtResource("2_3ir4p")
region = Rect2(128, 384, 64, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_b10hi"]
atlas = ExtResource("2_3ir4p")
region = Rect2(192, 384, 64, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_887b0"]
atlas = ExtResource("2_3ir4p")
region = Rect2(256, 384, 64, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_dl05a"]
atlas = ExtResource("2_3ir4p")
region = Rect2(320, 384, 64, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_n4502"]
atlas = ExtResource("2_3ir4p")
region = Rect2(384, 384, 64, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_6p7k3"]
atlas = ExtResource("2_3ir4p")
region = Rect2(448, 384, 64, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_2ew71"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7wfbd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vfgpo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_deov5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g6sbq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gc6fq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8rx15")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_34ic3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4vxl3")
}],
"loop": true,
"name": &"idle_down",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_g6xuv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ut5wl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_quogb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rlqpd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tus85")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vj872")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fscgg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xaj06")
}],
"loop": true,
"name": &"idle_lef_right",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1e3o3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fs718")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lkdhf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_08ucw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qnsaj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q36nk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ur1ip")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nsy1f")
}],
"loop": true,
"name": &"idle_up",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yjr6p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xlnop")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_113jh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rgo2y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ht1bu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l6kb1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0x4a6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_livl3")
}],
"loop": true,
"name": &"run_down",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wqbqd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gieyu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_10duh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l7m2o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_85l2v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l8xdi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g6plc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d2rhc")
}],
"loop": true,
"name": &"run_left_right",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_f3hf2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ixb8o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wkyrq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b10hi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_887b0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dl05a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n4502")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6p7k3")
}],
"loop": true,
"name": &"run_up",
"speed": 10.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_55g71"]
radius = 17.0
height = 84.0

[node name="Player" type="CharacterBody2D" groups=["player"]]
position = Vector2(236, 185)
collision_mask = 2
script = ExtResource("1_h4yhi")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_2ew71")
animation = &"idle_down"
frame = 3
frame_progress = 0.0679918

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, -4)
shape = SubResource("CapsuleShape2D_55g71")

[node name="Weapons" type="Node2D" parent="."]
visible = false
position = Vector2(0, -4)

[node name="ControlWeapons" type="Node2D" parent="Weapons"]
position = Vector2(1, 12)

[node name="Gun" type="Sprite2D" parent="Weapons/ControlWeapons"]
position = Vector2(-3, -21)
scale = Vector2(0.05, 0.05)
texture = ExtResource("4_yjfnv")

[node name="MarkerMid" type="Marker2D" parent="Weapons/ControlWeapons"]
position = Vector2(31, -1)

[node name="MarkerDown" type="Marker2D" parent="Weapons/ControlWeapons"]
position = Vector2(31, 5)

[node name="MarkerUp" type="Marker2D" parent="Weapons/ControlWeapons"]
position = Vector2(31, -8)

[node name="ProgressBarHealt" type="TextureProgressBar" parent="."]
offset_left = -28.0
offset_top = -62.0
offset_right = 92.0
offset_bottom = -38.0
scale = Vector2(0.5, 0.5)
value = 100.0
texture_progress = ExtResource("5_guolk")

[node name="AudioPistol" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_qu416")
volume_db = -9.87

[node name="AudioFusil" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_t6s4b")
volume_db = -9.87

[node name="AudioShotgun" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_v6waj")
volume_db = -9.87

[node name="AudioShotgunReload" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_a8eu8")
volume_db = -3.065
pitch_scale = 1.4

[node name="AudioNoAmmo" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_mfh5m")

[node name="Camera2D" type="Camera2D" parent="."]
visible = false
enabled = false

[node name="AmmoControl" type="Node2D" parent="."]

[node name="ColorRect" type="ColorRect" parent="AmmoControl"]
offset_left = -622.0
offset_top = -341.0
offset_right = -501.0
offset_bottom = -293.0

[node name="LabelAmmo" type="Label" parent="AmmoControl"]
offset_left = -600.0
offset_top = -341.0
offset_right = -528.0
offset_bottom = -287.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("10_gevxw")
theme_override_font_sizes/font_size = 48
text = "999"

[node name="AtFollow" type="Node2D" parent="."]

[node name="FollowLeft" type="Marker2D" parent="AtFollow"]
position = Vector2(-22, 0)

[node name="FollowRight" type="Marker2D" parent="AtFollow"]
position = Vector2(22, 0)

[node name="FollowLeftAway" type="Marker2D" parent="AtFollow"]
position = Vector2(-80, 0)

[node name="FollowRightAway" type="Marker2D" parent="AtFollow"]
position = Vector2(80, 0)

[node name="FollowDownLeft" type="Marker2D" parent="AtFollow"]
position = Vector2(-22, 16)

[node name="FollowDownRight" type="Marker2D" parent="AtFollow"]
position = Vector2(22, 15)

[node name="FollowUpLeft" type="Marker2D" parent="AtFollow"]
position = Vector2(-22, -29)

[node name="FollowUpRight" type="Marker2D" parent="AtFollow"]
position = Vector2(22, -29)
